fix preloader screen background image not covering entire screen

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,6 @@
-.App {
+.app {
   max-width: 100vw;
-  min-height: 500px;
+  min-height: 100vh;
   background: linear-gradient(
       180deg,
       rgba(217, 217, 217, 0) 0%,
