--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -39,8 +39,8 @@
 
 .preloader {
   position: absolute;
-  width: 100vw;
-  height: 100vh;
+  width: 98vw;
+  min-height: 100vh;
 }
 
 .preloader__dot {
