--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -7,7 +7,7 @@
 
 .profile {
   padding: 10px 35px 30px;
-  min-height: 550px;
+  min-height: 100vh;
   font-family: "Oswald";
   display: flex;
 }
